# CritPT

./: .env.example  .gitattributes  .gitignore  README.md  README.zh-CN.md  STATUS.zh-CN.md  TECHNICAL_DOC.zh-CN.md  pyproject.toml
artifacts/: README.md
artifacts/curated/: e2_base_official70_score.json  e3_realtime_summary.json  full_dashboard.html  index.html
configs/experiments/: README.md  qwen3_14b_grpo_verl.env  qwen3_32b_grpo_openrlhf_smoke.env  qwen3_32b_grpo_verl_smoke.env  qwen3_8b_grpo_e4_official_style_final_answer_from_e3.env  qwen3_8b_grpo_e5b_failure_aware_curriculum_from_e4.env  qwen3_8b_grpo_e6_teacher_specs_strict_judge_from_e4.env  qwen3_8b_grpo_v13_official_code_format_signal_n4.env  qwen3_8b_grpo_v14_compact_exec_n4.env  (+2 more)
configs/hardware/: a100_8x40g_pcie.env
data/: README.md
docs/: current_node.md  experiments.zh-CN.md  hardware.md  overview.zh-CN.md  pipeline.zh-CN.md  research_journey.zh-CN.md  rl_diagnostics.zh-CN.md  run_evidence.zh-CN.md  runbook.md  week_plan.md
requirements/: remote.txt
scripts/: README.md  tmux_start.sh
tests/: test_critpt_synth.py  test_e1_llm_wrapped.py  test_e3_strict_code_judge_reward.py  test_e4_official_style.py  test_final_answer_verifier.py  test_model_judge_lenaware.py  test_openai_compatible.py  test_semantic_code_judge_reward.py  test_semantic_judge_exporter.py  test_v12_natural_physics.py  test_v13_official_style.py  test_v14_compact_exec.py  test_v15_hardmix.py  test_v20_focused_hard.py  test_v21_operator_precision.py  test_verifier.py  test_verl_reward.py  test_verl_reward_v14_compact.py
(+140 files in other folders)
