[project]
name = "rl-posttrain-infra"
version = "0.1.0"
description = "Minimal infra for CritPT-style Qwen post-training on 8x A100/H100-class nodes."
requires-python = ">=3.10"
dependencies = [
  "sympy>=1.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

