[project]
name = "rl-posttrain-lab"
version = "0.1.0"
description = "CritPT-style Qwen post-training experiments with synthetic data, reward design, GRPO runs, and evaluation tooling."
requires-python = ">=3.10"
dependencies = [
  "sympy>=1.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]

[tool.ruff]
line-length = 100
target-version = "py310"
